// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropMenuButton default 1`] = `
<div
  className="sc-gPEVay kRBhTm"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "backgroundColor": "#4d63ff",
      "borderBottomColor": "#4d63ff",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#4d63ff",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#4d63ff",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#4d63ff",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "color": "#fff",
      "lineHeight": "3rem",
    }
  }
>
  <input
    className="sc-iRbamj gSSfme"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  />
  <div
    className="sc-jlyJG grYeNN"
  >
    <div
      className="sc-hzDkRC bCNFoS"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={Object {}}
    />
    <i
      className="lugia-icon-direction_down   sc-VigVT bZGqSI"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "paddingBottom": "0rem",
          "paddingLeft": "0.6rem",
          "paddingRight": "0.6rem",
          "paddingTop": "0rem",
        }
      }
    />
  </div>
</div>
`;

exports[`DropMenuButton divided={false} 1`] = `
<div
  className="sc-gPEVay kRBhTm"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "backgroundColor": "#4d63ff",
      "borderBottomColor": "#4d63ff",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#4d63ff",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#4d63ff",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#4d63ff",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "color": "#fff",
      "lineHeight": "3rem",
    }
  }
>
  <input
    className="sc-iRbamj gSSfme"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  />
  <div
    className="sc-jlyJG grYeNN"
  >
    <div
      className="sc-hzDkRC bCNFoS"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={Object {}}
    />
    <i
      className="lugia-icon-direction_down   sc-VigVT bZGqSI"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "paddingBottom": "0rem",
          "paddingLeft": "0.6rem",
          "paddingRight": "0.6rem",
          "paddingTop": "0rem",
        }
      }
    />
  </div>
</div>
`;

exports[`DropMenuButton type=basic 1`] = `
<div
  className="sc-gPEVay kRBhTm"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(0,0,0,0)",
      "backgroundImage": "none",
      "borderBottomWidth": 0,
      "borderLeftWidth": 0,
      "borderRightWidth": 0,
      "borderTopWidth": 0,
      "color": "#4d63ff",
      "lineHeight": "3rem",
    }
  }
>
  <input
    className="sc-iRbamj gSSfme"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  />
  <div
    className="sc-jlyJG grYeNN"
  >
    <div
      className="sc-hzDkRC bCNFoS"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={Object {}}
    />
    <i
      className="lugia-icon-direction_down   sc-VigVT bZGqSI"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "paddingBottom": "0rem",
          "paddingLeft": "0.6rem",
          "paddingRight": "0.6rem",
          "paddingTop": "0rem",
        }
      }
    />
  </div>
</div>
`;

exports[`DropMenuButton type=primary,divided={true} 1`] = `
<div
  className="sc-csuQGl cdqunj"
  disabled={false}
  style={
    Object {
      "lineHeight": "3rem",
    }
  }
  type="primary"
>
  <span
    checked={false}
    className="sc-fBuWsC eMCLdn"
    disabled={false}
    type="primary"
  />
  <div
    className="sc-Rmtcm cTaZul"
  >
    <div
      checked={false}
      className="sc-bRBYWo cgJQpJ"
      disabled={false}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderBottomColor": "#cccccc",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0.1rem",
          "borderLeftColor": "#cccccc",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "borderTopColor": "#cccccc",
          "borderTopStyle": "solid",
          "borderTopWidth": "0.1rem",
          "color": "#666666",
        }
      }
      type="primary"
    >
      <input
        className="sc-iRbamj gSSfme"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      />
    </div>
    <span
      checked={false}
      className="sc-jhAzac jDffzn"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderBottomColor": "#cccccc",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0.1rem",
          "borderRightColor": "#cccccc",
          "borderRightStyle": "solid",
          "borderRightWidth": "0.1rem",
          "borderTopColor": "#cccccc",
          "borderTopStyle": "solid",
          "borderTopWidth": "0.1rem",
          "color": "#666666",
        }
      }
      type="primary"
    >
      <input
        className="sc-iRbamj gSSfme"
        disabled={false}
        onBlur={[Function]}
        type="button"
      />
      <i
        className="lugia-icon-direction_down   sc-VigVT jbKUDW"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      />
    </span>
  </div>
</div>
`;
